project3/examples/1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxdemo-hello
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: nginxdemo-hello
