project3/examples/1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginxdemo-hello
  name: nginxdemo-hello
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nginxdemo-hello
